--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "roostertailsoftware.staruml-requirements-reindex",
   "title": "Reindex Requirement's id",
   "version": "0.5.1",
-  "keywords": [ "Requirements", "StarUML", "UML", "SysML"],
+  "keywords": [
+    "Requirements",
+    "StarUML",
+    "UML",
+    "SysML"
+  ],
   "description": "Reindex the id fields in Requirement heirarchy",
   "main": "main.js",
   "repository": {
-    "type":"git",
-    "url":"https://github.com/RoostertailSoftware/staruml-requirements-reindex.git"
+    "type": "git",
+    "url": "https://github.com/RoostertailSoftware/staruml-requirements-reindex.git"
   },
   "author": {
     "name": "Roostertail Software",
     "email": "john@roostertailsoftware.com",
     "url": "https://roostertailsoftware.com"
   },
-  "bugs":"https://github.com/RoostertailSoftware/staruml-requirements-reindex/issues",
+  "bugs": "https://github.com/RoostertailSoftware/staruml-requirements-reindex/issues",
   "engines": {
     "staruml": ">=4.0.0"
   },
   "license": "MIT",
-  "dependencies": {
-    "lodash": "^4.17.20"
-  }
+  "dependencies": {}
 }
